--- a/style.css
+++ b/style.css
@@ -32,5 +32,14 @@ body {
 
 #timer {
     margin: 10px;
+    font-size: 1.2rem;
+}
 
+button {
+    padding: 10px;
+    width: 150px;
+    border-radius: 6px;
+    border: none;
+    cursor: pointer;
+    font-size: 1.2rem;
 }
