--- a/style.css
+++ b/style.css
@@ -38,8 +38,14 @@ body {
 button {
     padding: 10px;
     width: 150px;
+    background-color: darkgray;
+    color: white;
     border-radius: 6px;
     border: none;
     cursor: pointer;
     font-size: 1.2rem;
+}
+
+button:hover {
+    filter: brightness(1.2);
 }
